--- a/toric_blowup.ipynb
+++ b/toric_blowup.ipynb
@@ -3,38 +3,17 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "concrete-employer",
+   "id": "russian-sunglasses",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " -----    -----    -----      -      -----   \n",
-      "|     |  |     |  |     |    | |    |     |  \n",
-      "|     |  |        |         |   |   |     |  \n",
-      "|     |   -----   |        |     |  |-----   \n",
-      "|     |        |  |        |-----|  |   |    \n",
-      "|     |  |     |  |     |  |     |  |    |   \n",
-      " -----    -----    -----   -     -  -     -  \n",
-      "\n",
-      "...combining (and extending) ANTIC, GAP, Polymake and Singular\n",
-      "Version\u001b[32m 0.5.1 \u001b[39m... \n",
-      " ... which comes with absolutely no warranty whatsoever\n",
-      "Type: '?Oscar' for more information\n",
-      "(c) 2019-2021 by The Oscar Development Team\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "using Oscar\n",
-    "using Polymake"
+    "using Oscar"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "sharing-channels",
+   "id": "controlling-series",
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "overhead-headset",
+   "id": "french-charm",
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "wound-october",
+   "id": "vocal-distribution",
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "amazing-ebony",
+   "id": "optional-empty",
    "metadata": {},
    "outputs": [
     {
@@ -158,8 +137,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "guilty-trinidad",
+   "execution_count": 60,
+   "id": "spoken-label",
    "metadata": {},
    "outputs": [
     {
@@ -168,14 +147,28 @@
        "toric_blowup (generic function with 1 method)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "function findBarycenter(s,X)\n",
+    "    rays = rowMinors(Array(X.RAYS), s)\n",
+    "    dim=size(rays,2)\n",
+    "    bary=zeros(Polymake.Rational,dim,1)\n",
+    "    for i in 1:size(rays,1)\n",
+    "        bary+=rays[i,:]\n",
+    "    end\n",
+    "    bary=Polymake.common.primitive(bary)\n",
+    "    return bary\n",
+    "end\n",
+    "\n",
     "function toric_blowup(s, X, v)\n",
     "    s = [i + 1 for i in s]\n",
+    "    if v==nothing\n",
+    "        v=findBarycenter(s,X)\n",
+    "    end\n",
     "    coneList = convertIncidenceMatrix(X.MAXIMAL_CONES)\n",
     "    starIndex = findall((t) -> all(((i) -> i in t).(s)), coneList)\n",
     "    star = [coneList[i] for i in starIndex]\n",
@@ -209,7 +202,7 @@
     "            end\n",
     "        end\n",
     "        finalCones = [[i - 1 for i in cone] for cone in append!(coneList, newCones)]\n",
-    "        return fulton.NormalToricVariety(INPUT_RAYS = Array(X.RAYS), INPUT_CONES = append!(coneList, newCones))\n",
+    "        return Polymake.fulton.NormalToricVariety(INPUT_RAYS = Array(X.RAYS), INPUT_CONES = append!(coneList, newCones))\n",
     "    end\n",
     "    newCones = []\n",
     "    for t in clStar\n",
@@ -217,41 +210,44 @@
     "            push!(newCones, push!(t, n))\n",
     "        end\n",
     "    end\n",
-    "    \n",
-    "    finalRays = [(X.RAYS); v]\n",
+    "    finalRays = vcat((X.RAYS),transpose(v))\n",
     "    finalCones = [[i - 1 for i in cone] for cone in append!(coneList, newCones)]\n",
     "    \n",
-    "    return fulton.NormalToricVariety(INPUT_RAYS = finalRays, INPUT_CONES = finalCones)\n",
+    "    return Polymake.fulton.NormalToricVariety(INPUT_RAYS = finalRays, INPUT_CONES = finalCones)\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "affecting-lingerie",
+   "execution_count": 23,
+   "id": "public-football",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "[$0$, $1$]"
+      ],
       "text/plain": [
-       "toric_blowup (generic function with 2 methods)"
+       "2-element Array{Int64,1}:\n",
+       " 0\n",
+       " 1"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "function toric_blowup(s,X)\n",
-    "    rays = rowMinors(Array(X.RAYS), s)\n",
-    "end"
+    "M=[1 0;0 1]\n",
+    "M[1,:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "naked-maryland",
+   "execution_count": 40,
+   "id": "sunset-turner",
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +255,7 @@
       "text/html": [
        "<dl> <dt>type</dt><dd> NormalToricVariety</dd> </dl><details><summary>INPUT_CONES</summary><pre>{0 1}</pre></details>\n",
        "<details><summary>INPUT_RAYS</summary><pre>1 0\n",
-       "1 2</pre></details>"
+       "0 1</pre></details>"
       ],
       "text/plain": [
        "type: NormalToricVariety\n",
@@ -269,34 +265,34 @@
        "\n",
        "INPUT_RAYS\n",
        "\t1 0\n",
-       "\t1 2\n"
+       "\t0 1\n"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tv = fulton.NormalToricVariety(INPUT_RAYS=[1 0; 1 2]; INPUT_CONES=[[0,1]])"
+    "tv = Polymake.fulton.NormalToricVariety(INPUT_RAYS=[1 0; 0 1]; INPUT_CONES=[[0,1]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "offensive-release",
+   "execution_count": 42,
+   "id": "removed-prescription",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "false"
+       "true"
       ],
       "text/plain": [
-       "false"
+       "true"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,39 +303,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "chicken-seven",
+   "execution_count": 61,
+   "id": "sapphire-making",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "s:[1, 2]\n",
-      "coneList: [[1, 2]]\n",
-      "star: [[1, 2]]\n",
-      "faces:pm::Array<pm::Set<long, pm::operations::cmp>>\n",
-      "{-1}\n",
-      "{0 1}\n",
-      "{0}\n",
-      "{1}\n",
-      "{}\n",
-      "\n",
-      "c: 1\n",
-      "rank c subcones:Polymake.SetAllocated{Int64}[pm::Set<long, pm::operations::cmp>\n",
-      "{0}, pm::Set<long, pm::operations::cmp>\n",
-      "{1}]\n",
-      "clStar: Any[[1], [2]]\n",
-      "coneList: Array{Int64,1}[]\n"
-     ]
-    },
+     "data": {
+      "text/plain": [
+       "pm::Matrix<pm::Integer>\n",
+       "1\n",
+       "1\n"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "findBarycenter([1,2],tv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "sacred-money",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "subtle-solomon",
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/html": [
        "<dl> <dt>type</dt><dd> NormalToricVariety</dd> </dl><details><summary>INPUT_CONES</summary><pre>{0 2}\n",
        "{1 2}</pre></details>\n",
        "<details><summary>INPUT_RAYS</summary><pre>1 0\n",
-       "1 2\n",
+       "0 1\n",
        "1 1</pre></details>"
       ],
       "text/plain": [
@@ -351,23 +356,23 @@
        "\n",
        "INPUT_RAYS\n",
        "\t1 0\n",
-       "\t1 2\n",
+       "\t0 1\n",
        "\t1 1\n"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "out = toric_blowup([0,1], tv, [1 1])"
+    "Z=toric_blowup([0,1], tv, nothing)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "gorgeous-iceland",
+   "id": "competitive-grenada",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +396,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "tested-reason",
+   "id": "worst-restriction",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "efficient-cabinet",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "terminal-design",
+   "id": "comfortable-provider",
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "sexual-domain",
+   "id": "strange-nomination",
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "infrared-broadcasting",
+   "id": "nonprofit-canada",
    "metadata": {},
    "outputs": [],
    "source": []
