--- a/makeSmoothWithDependencies.ipynb
+++ b/makeSmoothWithDependencies.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "fitted-particular",
+   "id": "controversial-lodge",
    "metadata": {},
    "outputs": [
     {
@@ -33,8 +33,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "pharmaceutical-navigator",
+   "execution_count": 42,
+   "id": "committed-smoke",
    "metadata": {},
    "outputs": [
     {
@@ -43,17 +43,47 @@
        "convertBool (generic function with 1 method)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "function slicematrix(A)\n",
+    "\"\"\"\n",
+    "    slicematrix(::AbstractMatrix{<:Number})\n",
+    "\n",
+    "    Take a two-dimensional matrix and output a list of its row vectors.\n",
+    "\n",
+    "# Examples\n",
+    "```jldoctest makeSmoothWithDependencies\n",
+    "julia> A=[1 2; 3 4]\n",
+    "\n",
+    "julia> slicematrix(A)\n",
+    "[[ 1 ,  2 ], [ 3 ,  4 ]]\n",
+    "\"\"\"\n",
+    "\n",
+    "function slicematrix(A::AbstractMatrix{<:Number})\n",
     "    return [A[i, :] for i in 1:size(A,1)]\n",
     "end\n",
     "\n",
-    "function rowMinors(A,S)\n",
+    "\"\"\"\n",
+    "    rowMinors(::AbstractMatrix{<:Number},::AbstractSet)\n",
+    "\n",
+    "    Identical to slicematrix, except only returns row vectors indexed by a set S.\n",
+    "\n",
+    "# Examples\n",
+    "```jldoctest makeSmoothWithDependencies\n",
+    "julia> A=[1 2 3;4 5 6; 7 8 9]\n",
+    "\n",
+    "julia> S=Set([1,3])\n",
+    "\n",
+    "julia> rowMinors(A,S)\n",
+    "2×3 LinearAlgebra.Transpose{Int64,Array{Int64,2}}:\n",
+    " 1  2  3\n",
+    " 7  8  9\n",
+    "\"\"\"\n",
+    "\n",
+    "function rowMinors(A::AbstractMatrix{<:Number},S::AbstractSet)\n",
     "    outList=[]\n",
     "    slices=slicematrix(A)\n",
     "    for i in 1:size(slices,1)\n",
@@ -64,7 +94,23 @@
     "    return transpose(hcat(outList...))\n",
     "end\n",
     "\n",
-    "function convertIncidenceMatrix(A)\n",
+    "\"\"\"\n",
+    "    convertIncidenceMatrix(::Polymake.IncidenceMatrixAllocated{Polymake.NonSymmetric})\n",
+    "\n",
+    "    Takes a Polymake incidence matrix (e.g., the output of X.MAXIMAL_CONES for a toric variety X) and outputs a list of vectors,\n",
+    "    with each vector recording the indices marked on a given row of the incidence matrix.\n",
+    "\n",
+    "# Examples\n",
+    "```jldoctest makeSmoothWithDependencies\n",
+    "julia> X=Polymake.fulton.NormalToricVariety(INPUT_RAYS=[1 0;1 1; 0 1],INPUT_CONES=[[0,1],[1,2]])\n",
+    "\n",
+    "julia> M=X.MAXIMAL_CONES\n",
+    "\n",
+    "julia> convertIncidenceMatrix(M)\n",
+    "[[ 1 ,  2 ], [ 2 ,  3 ]]\n",
+    "\"\"\"\n",
+    "\n",
+    "function convertIncidenceMatrix(A::Polymake.IncidenceMatrixAllocated{Polymake.NonSymmetric})\n",
     "    A=Array(A)\n",
     "    dim1=size(A,1)\n",
     "    dim2=size(A,2)\n",
@@ -81,20 +127,24 @@
     "    return convert.(Array{Int64, 1}, out)\n",
     "end\n",
     "\n",
-    "function coneListFormat(coneList)\n",
-    "    memberList=[]\n",
-    "    denseList=slicematrix(coneList)\n",
-    "    for row in denseList\n",
-    "        members=[]\n",
-    "        for i in 1:size(row,1)\n",
-    "            if row[i]==1\n",
-    "                append!(members,i)\n",
-    "            end\n",
-    "        end\n",
-    "        append!(memberList,[members])\n",
-    "    end\n",
-    "    return memberList\n",
-    "end\n",
+    "\"\"\"\n",
+    "\n",
+    "    findBarycenter(::AbstractSet,::Polymake.BigObjectAllocated)\n",
+    "\n",
+    "    Takes a normal toric variety X and a set s corresponding to a subset of rays of X, and outputs a polymake vector\n",
+    "    corresponding to the barycenter of those rays.\n",
+    "\n",
+    "# Examples\n",
+    "```jldoctest makeSmoothWithDependencies\n",
+    "julia> X=Polymake.fulton.NormalToricVariety(INPUT_RAYS=[1 0;1 1; 0 1],INPUT_CONES=[[0,1],[1,2]])\n",
+    "\n",
+    "julia> s=[1,2]\n",
+    "\n",
+    "julia> findBarycenter(s,X)\n",
+    "pm::Matrix<pm::Integer>\n",
+    "2 1\n",
+    "\n",
+    "\"\"\"\n",
     "\n",
     "function findBarycenter(s,X)\n",
     "    rays = rowMinors(Array(X.RAYS), s)\n",
@@ -103,7 +153,7 @@
     "    for i in 1:size(rays,1)\n",
     "        bary+=rays[i,:]\n",
     "    end\n",
-    "    bary=Polymake.common.primitive(bary)\n",
+    "    bary=Polymake.common.primitive(transpose(bary))\n",
     "    return bary\n",
     "end\n",
     "\n",
@@ -158,6 +208,20 @@
     "    return Polymake.fulton.NormalToricVariety(INPUT_RAYS = finalRays, INPUT_CONES = finalCones)\n",
     "end\n",
     "\n",
+    "\"\"\"\n",
+    "\n",
+    "    convertBool(::AbstractVector)\n",
+    "\n",
+    "    Takes a column vector of boolean values and converts it to a vector of indices marked 'true'.\n",
+    "\n",
+    "#Examples\n",
+    "```jldoctest makeSmoothWithDependencies\n",
+    "julia> B=[true true false true]\n",
+    "\n",
+    "julia> convertBool(transpose(B))\n",
+    "[0, 1, 3]\n",
+    "\"\"\"\n",
+    "\n",
     "function convertBool(B)\n",
     "    out=[]\n",
     "    for i in 1:size(B,1)\n",
@@ -171,8 +235,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "devoted-western",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "protecting-synthetic",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 28,
-   "id": "ideal-instruction",
+   "id": "controlled-conversion",
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "desperate-grammar",
+   "id": "retained-tissue",
    "metadata": {},
    "outputs": [
     {
@@ -355,8 +435,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "close-withdrawal",
+   "execution_count": 7,
+   "id": "essential-width",
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +465,7 @@
        "\t1 1 1\n"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,51 +476,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "monetary-lingerie",
+   "execution_count": 20,
+   "id": "broad-pioneer",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<dl> <dt>type</dt><dd> NormalToricVariety</dd> </dl><details><summary>INPUT_CONES</summary><pre>{0 2 3}\n",
-       "{0 2 4}\n",
-       "{1 2 4}</pre></details>\n",
-       "<details><summary>INPUT_RAYS</summary><pre>1 0 0\n",
-       "1 2 0\n",
-       "0 0 1\n",
-       "0 1 0\n",
-       "1 1 0</pre></details>"
-      ],
       "text/plain": [
-       "type: NormalToricVariety\n",
-       "\n",
-       "INPUT_CONES\n",
-       "\t{0 2 3}\n",
-       "\t{0 2 4}\n",
-       "\t{1 2 4}\n",
-       "\n",
-       "INPUT_RAYS\n",
-       "\t1 0 0\n",
-       "\t1 2 0\n",
-       "\t0 0 1\n",
-       "\t0 1 0\n",
-       "\t1 1 0\n"
+       "Polymake.BigObjectAllocated"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "makeSmooth(X)"
+    "typeof(X)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "heavy-buying",
+   "id": "scheduled-norman",
    "metadata": {},
    "outputs": [],
    "source": []
