--- a/makeSmoothWithDependencies.ipynb
+++ b/makeSmoothWithDependencies.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "controversial-lodge",
+   "execution_count": 3,
+   "id": "congressional-earthquake",
    "metadata": {},
    "outputs": [
     {
@@ -33,8 +33,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "committed-smoke",
+   "execution_count": 4,
+   "id": "visible-conviction",
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
        "convertBool (generic function with 1 method)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +146,7 @@
     "\n",
     "\"\"\"\n",
     "\n",
-    "function findBarycenter(s,X)\n",
+    "function findBarycenter(s::AbstractSet,X::Polymake.BigObjectAllocated)\n",
     "    rays = rowMinors(Array(X.RAYS), s)\n",
     "    dim=size(rays,2)\n",
     "    bary=zeros(Polymake.Rational,dim,1)\n",
@@ -222,7 +222,7 @@
     "[0, 1, 3]\n",
     "\"\"\"\n",
     "\n",
-    "function convertBool(B)\n",
+    "function convertBool(B::AbstractVector)\n",
     "    out=[]\n",
     "    for i in 1:size(B,1)\n",
     "        if B[i]==true\n",
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "devoted-western",
+   "id": "vulnerable-prior",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -244,15 +244,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "protecting-synthetic",
+   "id": "enclosed-ordinance",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "controlled-conversion",
+   "execution_count": 5,
+   "id": "thorough-bargain",
    "metadata": {},
    "outputs": [
     {
@@ -261,16 +261,12 @@
        "makeSimplicial (generic function with 1 method)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "function getConeRays(coneRayIndices, rayMatrix)\n",
-    "    return convert(Matrix{Int}, tv.RAYS[findall(bool -> bool, coneRayIndices),:])\n",
-    "end\n",
-    "\n",
     "function getConeRank(coneRayIndices, rayMatrix)\n",
     "    coneRays = rowMinors(rayMatrix,coneRayIndices)\n",
     "    return rank(Matrix(coneRays))\n",
@@ -343,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "retained-tissue",
+   "id": "proof-lodge",
    "metadata": {},
    "outputs": [
     {
@@ -378,6 +374,7 @@
     "    while(true)\n",
     "        coneList = convertIncidenceMatrix(Y.MAXIMAL_CONES)\n",
     "        rayMatrix = Array(Y.RAYS)\n",
+    "        \n",
     "        k = 1\n",
     "        for coneSet in coneList\n",
     "            S=size(coneSet)[1]\n",
@@ -393,6 +390,7 @@
     "        if k == size(coneList,1)+1\n",
     "            break\n",
     "        end\n",
+    "        \n",
     "        sigma=coneList[k]\n",
     "        sigmaRays=slicematrix(rowMinors(rayMatrix,sigma))\n",
     "        tau=0; tauRays=0; tauCone=0\n",
@@ -411,6 +409,7 @@
     "                end \n",
     "            end\n",
     "        end\n",
+    "        \n",
     "        H=slicematrix(Matrix(tauCone.HILBERT_BASIS_GENERATORS[1]))\n",
     "        rayIndex=0\n",
     "        for i in 1:size(H,1)\n",
@@ -435,8 +434,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "essential-width",
+   "execution_count": 6,
+   "id": "delayed-bankruptcy",
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +464,7 @@
        "\t1 1 1\n"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,29 +475,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "broad-pioneer",
+   "execution_count": null,
+   "id": "civilian-insurance",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Polymake.BigObjectAllocated"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "typeof(X)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "scheduled-norman",
+   "id": "theoretical-maximum",
    "metadata": {},
    "outputs": [],
    "source": []
