Minor documentation additions

--- a/makeSmoothWithDependencies.ipynb
+++ b/makeSmoothWithDependencies.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "congressional-earthquake",
+   "execution_count": 2,
+   "id": "intensive-converter",
    "metadata": {},
    "outputs": [
     {
@@ -33,8 +33,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "visible-conviction",
+   "execution_count": 18,
+   "id": "structured-decision",
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
        "convertBool (generic function with 1 method)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +67,7 @@
     "end\n",
     "\n",
     "\"\"\"\n",
-    "    rowMinors(::AbstractMatrix{<:Number},::AbstractSet)\n",
+    "    rowMinors(::AbstractMatrix{<:Number},)\n",
     "\n",
     "    Identical to slicematrix, except only returns row vectors indexed by a set S.\n",
     "\n",
@@ -83,7 +83,7 @@
     " 7  8  9\n",
     "\"\"\"\n",
     "\n",
-    "function rowMinors(A::AbstractMatrix{<:Number},S::AbstractSet)\n",
+    "function rowMinors(A::AbstractMatrix{<:Number},S)\n",
     "    outList=[]\n",
     "    slices=slicematrix(A)\n",
     "    for i in 1:size(slices,1)\n",
@@ -235,24 +235,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "id": "african-barrier",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "$2$"
+      ],
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v=[1,2]\n",
+    "M=[0 1; 1 1; 1 0]\n",
+    "getConeRank(v,M)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "vulnerable-prior",
+   "id": "familiar-algorithm",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "enclosed-ordinance",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "thorough-bargain",
+   "execution_count": 16,
+   "id": "atmospheric-empire",
    "metadata": {},
    "outputs": [
     {
@@ -261,16 +279,47 @@
        "makeSimplicial (generic function with 1 method)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "function getConeRank(coneRayIndices, rayMatrix)\n",
+    "\"\"\"\n",
+    "\n",
+    "    getConeRank(::AbstractMatrix,::AbstractVector)\n",
+    "\n",
+    "    Takes a matrix and a vector containing indices corresponding to rows of a matrix,\n",
+    "    and calculates the rank of the matrix consisting only of those rows.\n",
+    "\n",
+    "#Examples\n",
+    "```jldoctest makeSmoothWithDependencies\n",
+    "julia> v=[1,2]\n",
+    "\n",
+    "julia> M=[0 1; 1 1; 1 0]\n",
+    "\n",
+    "julia> getConeRank(v,M)\n",
+    "2\n",
+    "\"\"\"\n",
+    "\n",
+    "function getConeRank(coneRayIndices::AbstractVector, rayMatrix::AbstractMatrix)\n",
     "    coneRays = rowMinors(rayMatrix,coneRayIndices)\n",
     "    return rank(Matrix(coneRays))\n",
     "end\n",
+    "\n",
+    "\"\"\"\n",
+    "    getDimension(::Polymake.BigObjectAllocated)\n",
+    "\n",
+    "    Returns the ambient dimension of a normal toric variety.\n",
+    "\n",
+    "#Examples\n",
+    "```jldoctest makeSmoothWithDependencies\n",
+    "julia> X=Polymake.fulton.NormalToricVariety(INPUT_RAYS=[1 0 0;1 2 0;0 0 1;0 1 0; 1 1 1],INPUT_CONES=[[0,1,2],[0,2,3,4]])\n",
+    "\n",
+    "julia> getDimension(X)\n",
+    "3\n",
+    "\n",
+    "\"\"\"\n",
     "\n",
     "function getDimension(X)\n",
     "    return size(X.RAYS, 2)\n",
@@ -339,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "proof-lodge",
+   "id": "normal-today",
    "metadata": {},
    "outputs": [
     {
@@ -434,8 +483,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "delayed-bankruptcy",
+   "execution_count": 20,
+   "id": "automotive-cursor",
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +513,7 @@
        "\t1 1 1\n"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,16 +524,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "civilian-insurance",
+   "execution_count": 21,
+   "id": "hollywood-nickel",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "$3$"
+      ],
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "getDimension(X)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "theoretical-maximum",
+   "id": "asian-hamburg",
    "metadata": {},
    "outputs": [],
    "source": []
